// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchLabel 镜像测试 不可用状态 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  position: absolute;
  top: 0;
  left: 0;
  color: #fafafa;
  z-index: 1;
  -webkit-transition: left 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: left 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: left 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  padding: 9px;
  border-radius: 50%;
  color: #bdbdbd;
}

.c0:hover {
  background-color: rgba(0,0,0,0.08);
}

.c0:hover {
  background-color: transparent;
}

.c0 .sinoui-switch__input {
  top: 0;
  left: -100%;
  width: 300%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  opacity: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
}

.c0 .sinoui-switch__thumb {
  width: 20px;
  height: 20px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  border-radius: 50%;
  background-color: currentColor;
}

.c0 .sinoui-switch__ripple {
  width: 38px;
  height: 38px;
}

.c0 .sinoui-switch__ripple-layout {
  left: 0;
  top: 0;
  width: 38px;
  height: 38px;
}

<span
  className="c0 sinoui-switch__label"
  disabled={true}
>
  <input
    className="sinoui-switch__input"
    disabled={true}
    type="checkbox"
  />
  <span
    className="sinoui-switch__thumb"
  />
</span>
`;

exports[`SwitchLabel 镜像测试 渲染SwitchLabel 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  position: absolute;
  top: 0;
  left: 0;
  color: #fafafa;
  z-index: 1;
  -webkit-transition: left 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: left 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: left 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  padding: 9px;
  border-radius: 50%;
}

.c0:hover {
  background-color: rgba(0,0,0,0.08);
}

.c0 .sinoui-switch__input {
  top: 0;
  left: -100%;
  width: 300%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  opacity: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
}

.c0 .sinoui-switch__thumb {
  width: 20px;
  height: 20px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  border-radius: 50%;
  background-color: currentColor;
}

.c0 .sinoui-switch__ripple {
  width: 38px;
  height: 38px;
}

.c0 .sinoui-switch__ripple-layout {
  left: 0;
  top: 0;
  width: 38px;
  height: 38px;
}

<span
  className="c0 sinoui-switch__label"
>
  <input
    className="sinoui-switch__input"
    type="checkbox"
  />
  <span
    className="sinoui-switch__thumb"
  />
</span>
`;

exports[`SwitchLabel 镜像测试 选中状态 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  position: absolute;
  top: 0;
  left: 0;
  color: #fafafa;
  z-index: 1;
  -webkit-transition: left 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: left 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: left 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  padding: 9px;
  border-radius: 50%;
  -webkit-transform: translateX(50%);
  -ms-transform: translateX(50%);
  transform: translateX(50%);
  color: #ff4081;
}

.c0:hover {
  background-color: rgba(0,0,0,0.08);
}

.c0:hover {
  background-color: rgba(255,64,129,0.12);
}

.c0 .sinoui-switch__input {
  top: 0;
  left: -100%;
  width: 300%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  opacity: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
}

.c0 .sinoui-switch__thumb {
  width: 20px;
  height: 20px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  border-radius: 50%;
  background-color: currentColor;
}

.c0 .sinoui-switch__ripple {
  width: 38px;
  height: 38px;
}

.c0 .sinoui-switch__ripple-layout {
  left: 0;
  top: 0;
  width: 38px;
  height: 38px;
}

<span
  checked={true}
  className="c0 sinoui-switch__label"
  color="accent"
>
  <input
    checked={true}
    className="sinoui-switch__input"
    type="checkbox"
  />
  <span
    className="sinoui-switch__thumb"
  />
</span>
`;
